--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,16 @@ add_subdirectory(vendor/libsamplerate EXCLUDE_FROM_ALL)
 add_executable(mazeGame src/main.cpp)
 
 include_directories(mazeGame PRIVATE src/include src/
-    vendor/ 
+    /home/computer/Documents/GitHub/MazeGame/vendor/stb/ 
     vendor/libsamplerate/include/ 
     vendor/portaudio/include/ 
+    res/textures/
     vendor/imgui/backends/ 
     vendor/glad/include/ 
     vendor/glad/src/ 
     vendor/glm/ 
     vendor/imgui/ 
+    vendor/ 
 )
 
 target_link_libraries(mazeGame PRIVATE SDL2-static)
@@ -29,6 +31,8 @@ target_link_libraries(mazeGame PRIVATE samplerate)
 #set(CMAKE_BUILD_TYPE Release)
 
 target_compile_features(mazeGame PUBLIC cxx_std_17)
+
+file(COPY "./res/textures" DESTINATION "./textures")
 
 #sets compiler flags
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
@@ -62,6 +66,10 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wsuggest-override")
     SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wsuggest-final-types")
     SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wsuggest-final-methods")
+
+    #remove this when vendor fixes this warning
+    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wno-deprecated")
+    set(CMAKE_WARN_DEPRECATED OFF CACHE BOOL "" FORCE)
 
     #set release flags
     SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
